crates/lang-parse/tests/snapshots/tokenizer__lexer_assignment.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..1,
        token: Identifier(
            "a",
        ),
    },
    SpannedToken {
        span: 1..2,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 2..3,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 3..4,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 4..5,
        token: Identifier(
            "b",
        ),
    },
    SpannedToken {
        span: 5..6,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 6..7,
        token: OperatorMultiply,
    },
    SpannedToken {
        span: 7..8,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 8..9,
        token: LiteralInt(
            "2",
        ),
    },
]
