crates/lang-parse/tests/snapshots/tokenizer__lexer_doc comment.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..15,
        token: DocComment(
            "/// Doc comment",
        ),
    },
    SpannedToken {
        span: 15..20,
        token: Whitespace(
            "\n    ",
        ),
    },
    SpannedToken {
        span: 20..24,
        token: KeywordPart,
    },
    SpannedToken {
        span: 24..25,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 25..28,
        token: Identifier(
            "Foo",
        ),
    },
    SpannedToken {
        span: 28..29,
        token: SigilOpenBracket,
    },
    SpannedToken {
        span: 29..30,
        token: SigilCloseBracket,
    },
    SpannedToken {
        span: 30..31,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 31..32,
        token: SigilOpenCurlyBracket,
    },
    SpannedToken {
        span: 32..41,
        token: Whitespace(
            "\n        ",
        ),
    },
    SpannedToken {
        span: 41..49,
        token: Identifier(
            "Cylinder",
        ),
    },
    SpannedToken {
        span: 49..50,
        token: SigilOpenBracket,
    },
    SpannedToken {
        span: 50..56,
        token: Identifier(
            "height",
        ),
    },
    SpannedToken {
        span: 56..57,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 57..58,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 58..59,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 59..61,
        token: LiteralInt(
            "10",
        ),
    },
    SpannedToken {
        span: 61..63,
        token: Identifier(
            "mm",
        ),
    },
    SpannedToken {
        span: 63..64,
        token: SigilComma,
    },
    SpannedToken {
        span: 64..65,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 65..71,
        token: Identifier(
            "radius",
        ),
    },
    SpannedToken {
        span: 71..72,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 72..73,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 73..74,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 74..75,
        token: LiteralInt(
            "5",
        ),
    },
    SpannedToken {
        span: 75..77,
        token: Identifier(
            "mm",
        ),
    },
    SpannedToken {
        span: 77..78,
        token: SigilCloseBracket,
    },
    SpannedToken {
        span: 78..79,
        token: SigilSemiColon,
    },
    SpannedToken {
        span: 79..84,
        token: Whitespace(
            "\n    ",
        ),
    },
    SpannedToken {
        span: 84..85,
        token: SigilCloseCurlyBracket,
    },
]
