crates/lang-parse/tests/snapshots/tokenizer__lexer_escaped quote string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..36,
        token: LiteralString(
            "string \" with \" escaped \\ quotes",
        ),
    },
]
