crates/lang-parse/tests/snapshots/tokenizer__lexer_expr string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..1,
        token: FormatStringStart,
    },
    SpannedToken {
        span: 1..8,
        token: StringContent(
            "string ",
        ),
    },
    SpannedToken {
        span: 23..24,
        token: StringFormatOpen,
    },
    SpannedToken {
        span: 9..13,
        token: Identifier(
            "more",
        ),
    },
    SpannedToken {
        span: 13..14,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 14..15,
        token: OperatorAdd,
    },
    SpannedToken {
        span: 15..16,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 16..23,
        token: Identifier(
            "complex",
        ),
    },
    SpannedToken {
        span: 23..24,
        token: StringFormatClose,
    },
    SpannedToken {
        span: 24..35,
        token: StringContent(
            " expression",
        ),
    },
    SpannedToken {
        span: 35..36,
        token: FormatStringEnd,
    },
]
