crates/lang-parse/tests/snapshots/tokenizer__lexer_invalid expr string format.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..1,
        token: Identifier(
            "a",
        ),
    },
    SpannedToken {
        span: 1..2,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 2..3,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 3..4,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 4..21,
        token: Error(
            UnclosedStringFormat(
                4..21,
            ),
        ),
    },
    SpannedToken {
        span: 21..22,
        token: SigilSemiColon,
    },
    SpannedToken {
        span: 22..23,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 23..24,
        token: Identifier(
            "b",
        ),
    },
    SpannedToken {
        span: 24..25,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 25..26,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 26..27,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 27..28,
        token: LiteralInt(
            "1",
        ),
    },
]
